
[B][COLOR red]Update - v1.1.9 - June 12, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] "Trakt Manager" updated for changed to Venom addon.[/I]

[B][COLOR red]Update - v1.1.8 - June 08, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] "Rescrape Lib Item" is now availble for Library Items via context menu for
    items added from the Venom addon.[/I]

[B][COLOR red]Update - v1.1.7 - June 03, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] "Clear Providers" is now availble for Library Items via context menu for
    items added from the Venom addon.[/I]

[B][COLOR red]Update - v1.1.6 - May 26, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Update "Browse Series" to reflect "tvshow.clearart" and "tvshow.clearlogo"
    changes in Venom  This is only seen when Venom is set to "Direct Progress Scraping"
    and "Browse Serires" is chosen.[/I]

[B][COLOR red]Update - v1.1.5 - May 21, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed "Browse Series" and "Play from Here".[/I]

[B][COLOR red]Update - v1.1.4 - May 18, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Rescrape from widget loading old cached values upon
    re-entry of source select dialog.[/I]

[B][COLOR red]Update - v1.1.3 - April 18, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Update for compatibility with plugin.video.venom TVShow meta provider
    change from TVDb to TMDb.[/I]

[B][COLOR red]Update - v1.1.2 - March 10, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Change method of determining bookmarks to use "ListItem.IsResumable".[/I]

[B][COLOR red]Update - v1.1.1 - March 06, 2021[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Matrix(py3) compatibility update.[/I]

[B][COLOR red]Update - v1.1.0 - Oct. 05, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Service module cleanup.[/I]
[COLOR yellow]--[/COLOR][I] Changed to new fanart.[/I]

[B][COLOR red]Update - v1.0.9 - Oct. 05, 2020[/COLOR][/B]
[COLOR yellow]--[/COLOR][I] Fixed Trakt Manager not opening.[/I]
[COLOR yellow]--[/COLOR][I] Fixed Context Settings not opening.[/I]